manifest/k8s-production/namespaces/core/users/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users
spec:
  selector:
    matchLabels:
      app: users
  template:
    metadata:
      labels:
        app: users
    spec:
      imagePullSecrets:
      - name: regcred
      containers:
      - name: users
        image: adhithia21/myapp-go:14 # {"$imagepolicy": "flux-system:users"}
        resources:
          limits:
            memory: "128Mi"
            cpu: "100m"
          requests:
            memory: 50Mi
            cpu: 50m
        ports:
        - containerPort: 3000
