manifest/k8s-production/namespaces/core/users/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: users
spec:
  selector:
    app: users
  ports:
  - port: 80
    targetPort: 3000
